# sample-app-bizx

./: .gitignore  .mise.toml  .sops.yaml  CONTRIBUTING.md  Makefile  README.md  SPEC.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  deploy.yml
apps/backend/: .dockerignore  .env.example  .env.sops.example  Dockerfile  README.md  pyproject.toml
apps/backend/app/: auth.py  config.py  deps.py  lambda_handler.py  main.py  models.py
apps/backend/app/api/: boards.py  schemas.py  tasks.py
apps/backend/app/db/: repository.py  table.py
apps/backend/app/scripts/: create_table.py
apps/backend/tests/: conftest.py  test_boards.py  test_tasks.py
apps/frontend/: .env.example  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx  styles.css  vite-env.d.ts
apps/frontend/src/api/: client.ts  types.ts
apps/frontend/src/auth/: oidc.ts
apps/frontend/src/hooks/: useToken.ts
apps/frontend/src/pages/: BoardPage.tsx  BoardsPage.tsx
apps/frontend/src/test/: App.test.tsx  BoardPage.test.tsx  BoardsPage.test.tsx
docs/: deploy.md  onboarding.md  sops.md
infra/terraform/: README.md
infra/terraform/aws/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
infra/terraform/bootstrap/: main.tf
infra/terraform/modules/auth/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/backend/: main.tf  outputs.tf  variables.tf
scripts/: push-backend-image.sh  setup-github-deploy.sh
(+8 files in other folders)
